# react_wasm_3d

./: .gitignore  README.md  package.json
src/: App.jsx  SceneInit.js
wasm_3d/: Cargo.toml
wasm_3d/src/: lib.rs  main.rs
